--- a/src/app/detalhes-viagem/detalhes-viagem.component.html
+++ b/src/app/detalhes-viagem/detalhes-viagem.component.html
@@ -1,1 +1,68 @@
-<p>detalhes-viagem works!</p>
+
+<br>
+<section id="formulario">
+  <div class="row">
+    <div class="col-md-8 mb-4">
+      <div class="card mb-4">
+        <div class="card-header py-3">
+          <h5 class="mb-0 mt-3 float-left">Detalhes da viagem</h5>
+        </div>
+        <div class="card-body">
+          <form>
+            <!-- 2 column grid layout with text inputs for the first and last names -->
+            <div class="row mb-4">
+              <div class="col">
+                <div class="form-outline">
+                  <label class="form-label" for="form6Example1">Destino</label>
+                  <input type="text" id="form6Example1" placeholder="Acapulco" disabled class="form-control" />
+                </div>
+              </div>
+
+            </div>
+
+            <div class="form-outline mb-4">
+              <label class="form-label" for="form6Example3">Tipo</label>
+              <input type="text" id="form6Example3" placeholder="LAZER" disabled class="form-control" />
+            </div>
+
+            <div class="form-outline mb-4">
+              <label class="form-label" for="form6Example3">Data de chegada</label>
+              <input type="text" id="form6Example3" placeholder="08/06/2021" disabled class="form-control" />
+            </div>
+
+            <div class="form-outline mb-4">
+              <label class="form-label" for="form6Example3">Data de saída</label>
+              <input type="text" id="form6Example3" placeholder="18/06/2021" disabled class="form-control" />
+            </div>
+
+
+            <div class="form-outline mb-4">
+              <label class="form-label" for="form6Example3">Orçamento</label>
+              <input type="text" precision="2" id="form6Example3" placeholder="R$ 4.000,00" disabled class="form-control" />
+            </div>
+
+            <div class="form-outline mb-4">
+              <label class="form-label" for="form6Example3">Qtd. Pessoas</label>
+              <input type="text" id="form6Example3" placeholder="4" disabled class="form-control" />
+            </div>
+
+            <hr class="my-4" />
+
+            <a class="btn btn-primary mt-2 float-left" style="background-color: darkred;"   [routerLink]="['']"  role="button">Voltar</a>
+
+
+
+
+
+
+          </form>
+        </div>
+      </div>
+    </div>
+
+
+  </div>
+</section>
+
+
+
